# agentic-rag-workshop

./: README.md  crawler.py  embedding_model.py  indexing_pipeline.py  markdown_splitter.py  models.py  pyproject.toml  rag_llm.py  vector_db.py
chunking/: rag_chunking_strategies.html
data/input/crawler/qconlondon/: qcon_london_2025.json  qconlondon-full-sitemap.xml
data/input/eval/: qcon_london_md_files.json
data/output/crawled_pages/qcon_london_2025/: achieve-optimal-efficiency-your-developer-experience-teams.md  achieving-culture-works-inclusive-leadership-drives-lasting-success.md  achieving-precision-ai-retrieving-right-data-using-ai-agents.md  advanced-message-queuing-politics.md  ai-and-ml-software-engineers-foundational-insights.md  ai-developer-tools-are-focused-wrong-problem.md  ai-enabled-delivery-icsaet-cohort-only.md  ai-food-image-generation-production-how-why.md  apr2025.md  architecture-lead-scaling-today-shaping-tomorrow.md  architectures-youve-always-wondered-about.md  autocomplete-agents-ai-coding-state-play.md  beyond-code-building-personal-brand-boost-your-career.md  beyond-code-hiring-cultural-alignment.md  beyond-uptime-what-metric-going-green-software.md  beyond-warehouse-why-bigquery-alone-wont-solve-your-data-problems.md  blueprint-agentic-ai-services.md  building-culture-works.md  building-distributed-event-driven-architectures-across-multi-cloud-boundaries.md  building-embedding-models-large-scale-real-world-applications.md  changing-face-architectural-practice.md  (+103 more)
evaluation/: eval_gen_test.py  eval_prompts.md
sample-files/: llms.txt
(+124 files in other folders)
