[project]
name = "agentic-rag-workshop"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "chromadb>=1.1.0",
    "crawl4ai>=0.7.4",
    "gradio>=5.49.0",
    "langchain-community>=0.3.29",
    "openai>=1.108.1",
    "sentence-transformers>=5.1.1",
]
